--- a/webapp/src/app/app.component.html
+++ b/webapp/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 <!-- <mat-toolbar color="primary"> -->
   <mat-toolbar color="accent">
-    <span><img src="assets/gestionb-logo.png" width=35px height=50px (click)="gotoHome()"></span>
+    <span><img src="assets/logo.svg" width=auto height=40px (click)="gotoHome()"></span>
     <span style="margin-left: 20px;">{{title}}</span>
  </mat-toolbar>
  <router-outlet>
