--- a/webapp/src/app/pacientes-list-data/pacientes-list-data.component.scss
+++ b/webapp/src/app/pacientes-list-data/pacientes-list-data.component.scss
@@ -30,6 +30,11 @@
     text-transform:  capitalize;
     font-size: 15px;
 }
+.edad-edit-container {
+    display: flex;
+    align-items: center;
+    min-height: 24px;
+}
 
 .edad {
     font-size: 17px;
